--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -33,10 +33,13 @@
       </div>
     </div>
   </footer>
+   <!-- Bootstrap core JavaScript -->
+ <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+ <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+ <!-- Custom scripts for this template -->
+ <script src="js/clean-blog.min.js"></script>
+</body>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+</html>
