--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -1,24 +1,11 @@
-<nav
-  class="navbar navbar-expand-lg navbar-light fixed-top"
-  id="mainNav"
-  
->
-  <div class="container">
-    <a class="navbar-brand" href="/">Clean Blog</a>
-    <button
-      class="navbar-toggler navbar-toggler-right"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarResponsive"
-      aria-controls="navbarResponsive"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      Menu
-      <i class="fas fa-bars"></i>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold title" href="/">Clean Blog</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto menu">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
@@ -29,6 +16,11 @@
           <a class="nav-link" href="/add-post">Add New Post</a>
         </li>
       </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary bg-warning" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
+
