--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,12 +25,12 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <% for(let i = 0; i < posts.length; i++){ %>
           <div class="post-preview">
-            <a href="/post/<%= posts[i]._id %>">
+            <a href="/posts/<%= posts[i]._id %>">
               <h2 class="post-title">
                 <%= posts[i].title %>
               </h2>
               <h3 class="post-subtitle">
-                <%= posts[i].detail %>
+                <%= posts[i].detail.substring(0, 122) %>
               </h3>
             </a>
             <p class="post-meta">Posted by
