--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
+          <div class="site-heading text-danger">
             <h1>Clean Blog</h1>
             <span class="subheading">A Blog Theme by Start Bootstrap</span>
           </div>
